--- a/Game 248/style.css
+++ b/Game 248/style.css
@@ -8,13 +8,13 @@ body{
     justify-content: center;
     overflow: hidden;
     height: 100vh;
-    background-color: #fafafa;
+    background-color: #d7d7d7;
 }
 
 .game-container{
    width: 320px;
    height: 320px;
-   border: 1px solid #ccc;
+   border: 2px solid #323131;
    overflow: hidden;
 }
 
